# ecs

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  conanfile.py
src/: main.cc
src/ecs/: component_list.h  component_manager.h  engine.h  entity_manager.h  system.h  system_manager.h  type_def.h
tests/: engine.cc
